# rendering-lab

./: .clang-format  CMakeLists.txt  README.md
core/: CMakeLists.txt
core/src/: Buffer.cpp  Buffer.h  Check.h  Common.h  Core.cpp  Core.h  DeviceManager.cpp  DeviceManager.h  Instance.cpp  Instance.h  ModelImporter.cpp  ModelImporter.h  PhysicalDevice.cpp  PhysicalDevice.h  ShaderCompiler.cpp  ShaderCompiler.h  Swapchain.cpp  Swapchain.h  Texture.cpp  Texture.h  Utils.cpp  Utils.h  VertexBuffer.cpp  VertexBuffer.h  VulkanContext.cpp  VulkanContext.h  VulkanCore.cpp  VulkanCore.h  VulkanSwapchain.h  Window.cpp  Window.h
demos/: CMakeLists.txt
demos/BindlessPhong/: BindlessPhong.cpp  CMakeLists.txt
demos/DeviceDemo/: CMakeLists.txt
demos/GLSLShader/: CMakeLists.txt  GLSLShader.cpp
demos/InstanceDemo/: CMakeLists.txt
demos/PhysicalDeviceDemo/: CMakeLists.txt  PhysicalDeviceDemo.cpp
demos/SwapchainDemo/: CMakeLists.txt  SwapchainDemo.cpp
demos/cubemap/: CMakeLists.txt  CubeMap.cpp
